[project]
name = "patient_agent"
version = "0.1.0"
description = "patient_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
patient_agent = "patient_agent.main:run"
run_crew = "patient_agent.main:run"
train = "patient_agent.main:train"
replay = "patient_agent.main:replay"
test = "patient_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
